--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -9,6 +9,8 @@ Version: 0.0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain:baileigh
+GitHub Theme URI: https://github.com/engag3/baileigh-theme
+GitHub Branch: master
 Tags:
 
 This theme, like WordPress, is licensed under the GPL.
