Removed un needed extras

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -4,7 +4,7 @@ Theme URI: https://engag3.media/
 Author: ENGAG3 Media
 Author URI: https://engag3.media/
 Template: storefront
-Description: Custom theme designed for gunporn.co.
+Description: Custom theme designed for Baileigh 
 Version: 0.0.1
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
